--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Armors-solidity is a framework to build secure smart contracts on Ethereum.",
   "scripts": {
-    "test": ""
+    "test": "scripts/test.sh"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,16 @@
   "bugs": {
     "url": "https://github.com/armors/armors-solidity/issues"
   },
-  "homepage": "https://github.com/armors/armors-solidity#readme"
+  "homepage": "https://github.com/armors/armors-solidity#readme",
+  "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-bignumber": "^2.0.2",
+    "ganache-cli": "^6.1.0",
+    "truffle": "^4.1.8"
+  }
 }
