--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "armors-solidity",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Armors-solidity is a framework to build secure smart contracts on Ethereum.",
   "scripts": {
+    "test": "scripts/test.sh",
     "lint": "eslint .",
     "lint:sol": "solium -d .",
-    "test": "scripts/test.sh",
     "coverage": "scripts/coverage.sh"
   },
   "repository": {
@@ -33,6 +33,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-bignumber": "^2.0.2",
+    "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
     "eslint-config-import": "^0.13.0",
     "eslint-config-standard": "^11.0.0",
