--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "scripts/test.sh",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "lint:sol": "solium -d .",
+    "lint:sol:fix": "solium -d . --fix",
     "coverage": "scripts/coverage.sh"
   },
   "repository": {
@@ -32,6 +34,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
     "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
